--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         {"name": "Derek Li", "email": "dereksangshi2000@gmail.com.au"}
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "ez/data-structure": "1.*",
+        "ez/util": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
@@ -17,7 +19,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http://satis.ez.com"
+            "url": "http://satis.internal.balancenet.com.au"
         }
     ],
     "autoload": {
